syntax = "proto3";
option java_package = "models.proto.requests";
option java_generate_equals_and_hash = true;

message AddPartitionRequest {
  string topic = 1;
  int64  partition = 2;
}

