syntax = "proto3";
option java_package = "models.proto.requests";
option java_generate_equals_and_hash = true;
import "PublishRequest.proto";
import "AddPartitionRequest.proto";
import "CreateTopicRequest.proto";

message WriteRequest {
  oneof request {
    PublishRequest publish = 1;
    AddPartitionRequest addPartition = 2;
    CreateTopicRequest createTopic = 3;
  }
}

